# lecture_optimization

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  PLAN.md  README.md  Überarbeitungsplan.txt  index.html  newton_xtdx_pattern_lecture.md  todo.txt  todos.txt  todos_exercises.txt  todos_th.md  ueberarbeitungsplan.txt
exercises/: Makefile  R-quarto-packages.md  README-quarto.md  README.md  _quarto.yml  chapter.mk  pyproject.toml  quarto.mk
exercises/_quarto/: colab-math.qmd
exercises/exercise-01/: ex1-concordance.tex  ex1.Rnw  ex1.tex  sol1-concordance.tex  sol1.Rnw  sol1.tex
exercises/exercise-02/: ex2-concordance.tex  ex2.Rnw  ex2.tex  sol2-concordance.tex  sol2.Rnw  sol2.tex
exercises/exercise-03/: ex3.Rnw  ex3.tex  sol3.Rnw  sol3.tex
exercises/exercise-04/: ex4.Rnw  ex4.tex  sol4.Rnw  sol4.tex
exercises/exercise-05/: ex5.Rnw  ex5.tex  sol5.Rnw  sol5.tex
exercises/exercise-05-quarto/: sol_uv_opt_1_R.ipynb  sol_uv_opt_1_py.ipynb  sol_uv_opt_1_texts.ipynb  uv_opt_1.qmd  uv_opt_1_all.html  uv_opt_1_ex.html
exercises/exercise-06/: ex6.Rnw  ex6.tex  sol6.Rnw  sol6.tex
exercises/exercise-06-quarto/: mv_opt_1.qmd  mv_opt_1_all.html  mv_opt_1_ex.html  sol_mv_opt_1_R.ipynb  sol_mv_opt_1_py.ipynb  sol_mv_opt_1_texts.ipynb
exercises/exercise-07/: ex7.Rnw  ex7.tex  sol7.Rnw  sol7.tex
exercises/exercise-07-quarto/: mv_opt_2.qmd  mv_opt_2_all.html  mv_opt_2_ex.html  sol_mv_opt_2_R.ipynb  sol_mv_opt_2_py.ipynb  sol_mv_opt_2_texts.ipynb
exercises/exercise-08-quarto/: mv_opt_3.qmd  mv_opt_3_all.html  mv_opt_3_ex.html  sol_mv_opt_3_R.ipynb  (+2 more)
(+580 files in other folders)
